<resources>
    <string name="app_name">PlanningBoard</string>
    <string name="loadingtext">Loading...</string>
    <string name="addnew">Add New Note</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="goals">Goals</string>
    <string name="todo">Todo</string>
    <string name="weclomeText">Welcome to Planning Board!</string>
    <string name="usernameText">PlaceHolder</string>
    <string name="numTodoLeft">Todo\'s To Finish</string>
    <string name="NotesCreated">Notes Created</string>
    <string name="numTodoLeftNumber">0</string>
    <string name="numGoalLeftNumber">0</string>
    <string name="genQuoteText">Generate New Quote</string>
    <string name="gotoTodoButton">Todo List</string>
    <string name="gotoNotesButton">Notes</string>
    <string name="loginText">Please Login to continue</string>
    <string name="UsernameHint">Email Address</string>
    <string name="PasswordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="loginWithGoogleButton">Login with Google</string>
    <string name="signUpButton">no Account? Signup!</string>
    <string name="nameHint">Username</string>
    <string name="signUpDetails">Please add the following information below to create your account!</string>
    <string name="createAccountText">Create Account</string>
    <string name="SignupGoogle">Sign up Using Google!</string>
    <string name="CalendarText">Today\'s Date</string>
    <string name="ConfirmDate">Confirm</string>
    <string name="AddTodo">Click To Add Todo</string>
    <string name="PlanningBoardText">Planning Board</string>
    <string name="long_term">Long Term</string>
    <string name="medium_term">Medium Term</string>
    <string name="short_term">Short Term</string>
    <string name="settings">Settings</string>
    <string name="daily_todo_s">Daily Todo\'s</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="quote_format">\"%s\"</string>
    <string name="Author">Author</string>
    <string name="SearchText">Search</string>
    <string name="sharing_not_available">Sorry, You cannot share currently</string>
    <string name="shareFeatureText">I\'ve sent you the note with the title %1$S which had a body of: %2$S</string>
    <string name="start_typing">Start Typing!</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="shareFeatureTextTodo">I\'ve sent you something that needs done with the title %1$S, Here\'s the description: %2$S</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="sign_up_using_twitter">Sign up using Twitter</string>
    <string name="AlreadyAccountCreate">Already have an account? Login!</string>
    <string name="logout">Logout</string>
    <string name="loggingOut">Logging Out</string>
    <string name="displayName">Display Name</string>
</resources>