<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="LandingViewModel"
            type="uk.ac.abertay.planningboard.LandingViewModel" />

        <variable
        name="NoteViewModel"
        type="uk.ac.abertay.planningboard.NoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/weclomeText"
            android:textSize="@dimen/TextSizeHeader"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/UsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/usernameText"
            android:textSize="@dimen/TextSizeHeader"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

        <TextView
            android:id="@+id/Quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/quote_format(LandingViewModel.quote)}"
            android:textSize="@dimen/quoteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

        <TextView
            android:id="@+id/NumTodoLeftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/numTodoLeft"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/NotesCreated"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Quote" />

        <TextView
            android:id="@+id/NotesCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/NotesCreated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/NumTodoLeftText"
            app:layout_constraintTop_toBottomOf="@+id/Quote" />

        <TextView
            android:id="@+id/numTodoLeftNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/NumTodoLeftText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/NumTodoLeftText"
            app:layout_constraintTop_toBottomOf="@+id/NumTodoLeftText"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/numGoalsLeftNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numGoalLeftNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/NotesCreated"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/NotesCreated"
            app:layout_constraintTop_toBottomOf="@+id/NotesCreated"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/GenQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> LandingViewModel.nextQuote()}"
            android:text="@string/genQuoteText"
            app:layout_constraintBottom_toTopOf="@+id/NumTodoLeftText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

        <Button
            android:id="@+id/gotoTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotoTodoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/NumTodoLeftText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/NumTodoLeftText"
            app:layout_constraintTop_toBottomOf="@+id/numTodoLeftNumber"
            app:layout_constraintVertical_bias="0.505" />

        <Button
            android:id="@+id/gotoNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/gotoNotesButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/NotesCreated"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/NotesCreated"
            app:layout_constraintTop_toBottomOf="@+id/numGoalsLeftNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>